--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -47,79 +47,15 @@ We provide constructive soundness proofs for every reduction in this thesis, so 
 To avoid ambiguity in Definition~\vref {definition:FourBoxes}, Definition~\vref {definition:IsolatedSubflowRemoval} and Definition~\vref {definition:PathBreaker} we have establish the following convention:
 Let $\boldsymbol\epsilon=\epsilon_1,\dots,\epsilon_n$, $\boldsymbol\iota=\iota_1,\dots,\iota_m$, $\boldsymbol{\epsilon'}=\epsilon'_1,\dots,\epsilon'_n$ and $\boldsymbol{\iota'}=\iota'_1,\dots,\iota'_m$, then, when we write
 \[
-\atomicflow
-{
-(-10, 0)*{\invisiblemark};
-(  0, 6)*{\afvjdm4{\boldsymbol\epsilon}{}};
-(  0, 0)*{\affr{14}8};
-(  0, 0)*{\copy\contrup};
-( -6,-6)*{\afvjdm4{f_1(\boldsymbol\epsilon)}{}};
-(  0,-6)*{\cdots};
-(  6,-6)*{\afvjdm4{}{f_k(\boldsymbol\epsilon)}};
-( 10, 0)*{\invisiblemark};
-}
+\vcenter{\hbox{\includegraphics{Figures/convDissamb1}}}
 \qquad\mbox{and}\qquad
-\atomicflow
-{
-(-10, 0)*{\invisiblemark};
-(  0,-6)*{\afvjum4{\boldsymbol\iota}{}};
-(  0, 0)*{\affr{14}8};
-(  0, 0)*{\copy\contrdown};
-( -6, 6)*{\afvjum4{f_1(\boldsymbol\iota)}{}};
-(  0, 6)*{\cdots};
-(  6, 6)*{\afvjum4{}{f_k(\boldsymbol\iota)}};
-( 10, 0)*{\invisiblemark};
-}
+\vcenter{\hbox{\includegraphics{Figures/convDissamb2}}}
 \]
 we mean
 \[
-\atomicflow
-{
-(-10, 0)*{\invisiblemark};
-(  0,6)*{\afvjd4{\epsilon_1}{}};
-(  0,0)*{\affr{14}8};
-(  0,0)*{\copy\contrup};
-( -6,-6)*{\afvjd4{f_1(\epsilon_1)}{}};
-(  0,-6)*{\cdots};
-(  6,-6)*{\afvjd4{}{f_k(\epsilon_1)}};
-( 10, 0)*{\invisiblemark};
-}
-\quad\cdots\quad
-\atomicflow
-{
-(-10, 0)*{\invisiblemark};
-(  0,6)*{\afvjd4{\epsilon_n}{}};
-(  0,0)*{\affr{14}8};
-(  0,0)*{\copy\contrup};
-( -6,-6)*{\afvjd4{f_1(\epsilon_n)}{}};
-(  0,-6)*{\cdots};
-(  6,-6)*{\afvjd4{}{f_k(\epsilon_n)}};
-( 10, 0)*{\invisiblemark};
-}
+\vcenter{\hbox{\includegraphics{Figures/convDissamb3}}}
 \qquad\mbox{and}\qquad
-\atomicflow
-{
-(-10, 0)*{\invisiblemark};
-(  0,-6)*{\afvjd4{\iota_1}{}};
-(  0, 0)*{\affr{14}8};
-(  0, 0)*{\copy\contrdown};
-( -6, 6)*{\afvjd4{f_1(\iota_1)}{}};
-(  0, 6)*{\cdots};
-(  6, 6)*{\afvjd4{}{f_k(\iota_1)}};
-( 10, 0)*{\invisiblemark};
-}
-\quad\cdots\quad
-\atomicflow
-{
-(-10, 0)*{\invisiblemark};
-(  0,-6)*{\afvjd4{\iota_m}{}};
-(  0, 0)*{\affr{14}8};
-(  0, 0)*{\copy\contrdown};
-( -6, 6)*{\afvjd4{f_1(\iota_m)}{}};
-(  0, 6)*{\cdots};
-(  6, 6)*{\afvjd4{}{f_k(\iota_m)}};
-( 10, 0)*{\invisiblemark};
-}
+\vcenter{\hbox{\includegraphics{Figures/convDissamb4}}}
 \quad,
 \]
 respectively. In other words, edges are not connected in unexpected ways.
