--- a/thesis.tex
+++ b/thesis.tex
@@ -1,18 +1,27 @@
-\documentclass[a4paper,11pt]{article}
-%TODO: remove
-\usepackage{makeidx}
+%&pdflatex
+\documentclass[a4paper]{amsart}
 
-\usepackage{graphicx}
+%TODO: remove
+%\usepackage{makeidx}
+
+%\usepackage{microtype}
 \usepackage{fancyhdr}
-\usepackage{amsmath,amsthm}
 \usepackage{varioref}
-\usepackage[lutzsyntax]{virginialake}\aftrianglefalse
 \usepackage[urw-garamond]{mathdesign} % Comment this to use Times fonts
   \expandafter\ifx\csname leqslant\endcsname\relax\usepackage{txfonts}\fi
+\usepackage[lutzsyntax,noxy]{virginialake}
+\usepackage[pdftex]{graphicx}
+\usepackage[pdftex,dvipsnames,usenames]{color}
 \usepackage[pdfborder={0 0 0}]{hyperref}
 
-% please remove before submitting
+\multlinegap=0pt
+\setbox0=\hbox{$\>$}\setlength\arraycolsep{\wd0}
+
+%---------------------------------------------------------- REMOVE WHEN FINISHED
+\synctex=1
+% uncomment to show labels in the margin:
 %\usepackage[notref,notcite]{showkeys}
+%---------------------------------------------------------- REMOVE WHEN FINISHED
 
 
 
