--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -153,7 +153,12 @@ do not contain $\aid$, $\aiu$, $\awd$, $\awu$ vertices, and the flow to the righ
 
 %---------------------------------------------------
 \begin{definition}\label{definition:FlowIsomorphism}
-An (\emph{atomic}) \emph{flow isomorphism}\index{flow!isomorphism} between the atomic flows $\phi_1=(V_1,E_1,\eta_1,\up_1,\lo_1)$ and $\phi_2=(V_2,E_2,\eta_2,\up_2,\lo_2)$ is a pair of functions $(f_V,f_E)$, such that
+An (\emph{atomic}) \emph{flow isomorphism}\index{flow!isomorphism} between the atomic flows
+\begin{itemize}
+ \item $\phi_1=(V_1,E_1,\eta_1,\up_1,\lo_1)$, and
+ \item $\phi_2=(V_2,E_2,\eta_2,\up_2,\lo_2)$
+\end{itemize}
+is a pair of functions $(f_V,f_E)$, such that
 \begin{itemize}
 \item $f_V$ is a bijection from $V_1$ to $V_2$; and 
 \item $f_E$ is a bijection from $E_1$ to $E_2$,
