--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -203,9 +203,8 @@ We can then distinguish between the three occurrences of $\bar a$ that are mappe
        \vlhy        {\vls[(a.\fff).(a
                                    .\vlinf{}{}{\bar a^\one}\fff)]        }}}}
       \vlx.\vlx\bar a]
-\quad;
+\quad.
 \]
-we can also substitute for these occurrences, for example by $\{\bar a^\one/\fff\}$; such a situation occurs in the proof of Theorem~\ref{ThSimpleForm}. Note that simply substituting $\fff$ for $\bar a^\one$ would invalidate this derivation because it would break the cut and weakening instances; however, the proof of Theorem~\ref{ThSimpleForm} specifies how to fix such broken instances.
 
 We generalise this labelling mechanism to boxes. For example, we can use a different representation of the flow of $\Phi$ to individuate two classes $a^\phi$ and $\bar a^\phi$ of atom occurrences, as follows:
 \[
@@ -219,8 +218,9 @@ We generalise this labelling mechanism to boxes. For example, we can use a diffe
       \vlx.\vlx\bar a^\phi]
 \qquad\text{and}\qquad
 \vcenter{\hbox{\includegraphics{Figures/substExBox}}}
-\quad.
+\quad;
 \]
+we can also substitute for these occurrences, for example by $\{\bar a^\phi/\fff\}$; such a situation occurs in the proof of Theorem~\vref{theorem:SoundIsolatedSubflowRemoval}. Note that simply substituting $\fff$ for $\bar a^\phi$ would invalidate this derivation because it would break the cut and weakening instances; however Proposition~\vref{proposition:DerivationSubstitution} specifies how to fix such broken instances.
 
 %-------------------------------------------------------------------------------
 \begin{notation}\label{notation:FormulaSubstitution}
