Updated some references

--- a/atomic_flows.tex
+++ b/atomic_flows.tex
@@ -210,7 +210,7 @@ Given an atomic flow $\phi$ and a polarity assignment $\pi$ for $\phi$, whenever
 \vcenter{\hbox{\includegraphics{Figures/flowPolMi}}}
 \quad,
 \]
-respectively, we mean that all the edges in $\phi$ have polarity assignment $\ppl$ or $\pmi$, respectively. If we label an atomic flow with a polarity assignment it can not contain any interaction or cut vertices duo to property~\ref{definition:AtomicFlow:item:PolarityAssignment} of Definition~\vref{definition:AtomicFlow}.
+respectively, we mean that all the edges in $\phi$ have polarity assignment $\ppl$ or $\pmi$, respectively. \TODO{We no longer have the formal definiton of atomic flows:} If we label an atomic flow with a polarity assignment it can not contain any interaction or cut vertices duo to property~\ref{definition:AtomicFlow:item:PolarityAssignment} of Definition~\vref{definition:AtomicFlow}.
 \end{notation}
 %-------------
 
