Define vector of atoms

--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -34,6 +34,14 @@ In the following, $\lfloor x\rfloor$ denotes the maximum integer $n$ such that $
 
 The following class of threshold formulae, which we found to work for system $\SKS$, is a simplification of the one adopted in \cite{AtseGalePudl:02:Monotone:yu}.
 
+\newcommand{\avecletter}{{\boldsymbol a}}
+\newcommand{\avec}[2]{\avecletter_{#1}^{#2}}
+%----------------------------------------------
+\begin{definition}\label{definition:AtomVector}
+\TODO{Define $\avec1n$.}
+\end{definition}
+%---------------
+
 \renewcommand{\th}[2]{\mathop{\thetaup_{#1}^{#2}}}
 %-------------------------------------------------------------------------------
 \begin{definition}\label{definition:ThresholdFormulae}
