TODO's from Francois

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -63,11 +63,17 @@ all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the prem
 \end{enumerate}
 \end{proposition}
 
+\TODO{Macro for ``mapped from occurences of''.}
+
+\TODO{Carefully check ``atom'' v.\ ``atom occurence''.}
+
 %---------------------------------------
 \begin{definition}\label{definition:AssociatedFlow}
 Given a derivation $\Phi$, we say that the unique atomic flow $\phi$ defined in Proposition~\vref{proposition:FlowUnique} is the atomic flow \emph{associated with}\index{flow!associated with derivation} the derivation $\Phi$. Sometimes, when an atom occurrence $a$ in $\Phi$ is mapped to an edge $\epsilon$ in $\phi$, we decorate $a$ with the label $\epsilon$ or the label $\phi$.
 \end{definition}
 %---------------
+
+\TODO{Put example.}
 
 %--------------
 \begin{example}
@@ -240,6 +246,8 @@ Consider the rightmost derivation and its associated atomic flow in Figure~\ref{
 \]
 \end{example}
 %------------
+
+\TODO{Explain a bit the meaning of this result.}
 
 %-------------------------------------------------
 \begin{theorem}\label{theorem:SurjectiveDerToFlow}
