--- a/formalism.tex
+++ b/formalism.tex
@@ -6,6 +6,8 @@ The traditional formalism in deep inference is \emph{the calculus of structures}
 
 The idea of a new formalism, named \emph{formalism A} based on the calculus of structures, but where derivations contain less bureaucracy, was proposed by Guglielmi in \cite{Gugl:04:Formalis:am}, and later Br\"{u}nnler and Lengrand developed a term calculus around these ideas \cite{BrunLeng:05:On-Two-F:jf}.
 
+\TODO{Never use the term ``bureaucracy free'' or ``lack of bureaucracy''. Instead use ``bureaucracy reduced'' or ``reduced bureaucracy''. Moreover, the main benefit is the plasticity, not the bureaucracy.}
+
 In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\ref{subsection:ThresholdFormulae}).
 
 After presenting the functorial calculus we compare it briefly with the calculus of structures before we introduce the standard deductive system for classical logic in deep inference and show some preliminary results.
@@ -50,6 +52,8 @@ An \emph{inference rule}\index{inference rule} $\rho$ is an expression $\vlinf{\
 We now present the functorial calculus in the context of classical propositional logic and give some basic results.
 
 The intuition behind derivations in the functorial calculus is that we can compose derivations by the same connectives we can compose formulae.
+
+\TODO{Why not use automatic normal forms?}
 
 %----------------------------------------------
 \begin{definition}\label{definition:Derivation}
