--- a/local_reductions.tex
+++ b/local_reductions.tex
@@ -1,6 +1,8 @@
 %======================================
 \chapter{Local Reductions}
 
+\TODO{non-trivial automorphism.}
+
 In this chapter, we see local transformations, which are based on reduction rules. It is convenient to classify reduction rules into those for weakening and those for contraction. After seeing flow reductions and tying them with derivations, in Section~\ref{section:Soundness}, we explore some of their basic properties, in the two short Sections~\ref{section:TerminationConfluence} and \ref{section:FlowRewriteComplexity}.
 
 \begin{definition}\label{definition:FlowGraphicalExpressions}
