--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -16,6 +16,8 @@ A path can be eliminated by removing the edges that make up the path. However, w
 
 Sometimes, the elimination of edges mapped to by an atom $a$ might interfere with the elimination of edges mapped to from the atom $\bar a$. For this reason, we find it convenient to define special cases of simple form and weakly streamlined, where for every pair of dual atoms the edges mapped to from one of them are ignored. These are cases (\ref{definition:FlowNormalForms:item:SimpleForm}) and (\ref{definition:FlowNormalForms:item:WeaklyStreamlinedPolarity}) of Definition~\ref{definition:FlowNormalForms}.
 
+\TODO{Get intuition about simple form.}
+
 The intuition behind the other normal forms are:
 \begin{itemize}
 \item a weakly streamlined flow is streamlined if it contains no paths from interaction (resp., cut) to coweakening (resp., weakening) vertices, or from weakening to coweakening vertices;
