--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -1,5 +1,6 @@
 \chapter{Global Reductions}\label{chapter:GlobalReductions}
 
+\TODO{Consider internal/external instead of global/local}
 
 In this and the next chapter we see the second use of atomic flows: Controlling normalisation of derivations. Conventional wisdom teaches us that normalisation is a delicate property, and that a careful design of inference rules is necessary in order to obtain it. Atomic flows were designed to describe normal forms, by removing a lot of information about the inference rules, it is therefore surprising that they contain enough information to design normalisation procedures.
 
@@ -8,6 +9,8 @@ There are two kinds of flow reductions: global and local ones. In global reducti
 This chapter is dedicated to the most challenging part of normalisation: obtaining weakly streamlined derivations through global reductions. The process is non-confluent, and at first glance it increases the size of derivations exponentially. However, a second surprise was the fact that we are able to design procedures for weakly streamlining which only grow derivations quasipolynomially.
 
 We will define several `atomic flow reductions' which can be combined in different ways in order to obtain normalisation. Since we aim to produce derivations on normal forms, and not only their atomic flows, we find it convenient to define \emph{operators} on derivations in terms of the flow reductions. It is important to note that we could have performed all the procedures purely in terms of atomic flows. The final results about derivations would follow from the `soundness' of the flow reductions. We chose to be a bit more explicit and provide the derivations directly.
+
+\TODO{Change $f$ and $g$ into something else, as not coincide whith function names used afterwards.}
 
 %-------------------------------------------------
 \begin{definition}\label{definition:FlowReduction}
@@ -29,6 +32,8 @@ We call $\phi$ a \emph{redex} and $\psi$ a \emph{contractum} of $\mathrel R$.
 Given a reduction $R$ and two atomic flows $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, we indicate the bijections $f$ and $g$ by labeling the upper (resp., lower) edge $f(\epsilon)$ (resp., $g(\epsilon)$) of $\psi$ by $\epsilon$, for every upper (resp., lower) edge $\epsilon$ of $\phi$.
 \end{remark}
 %-----------
+
+\TODO{``lifting''}
 
 %--------------------------------------------------
 \begin{definition}\label{definition:SoundRedcution}
