Minor fixes due to Francois

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -4,9 +4,13 @@
 
 We now define the mapping from derivations to atomic flows. As we said, the idea is that structural rule instances map to the respective atomic-flow vertices, and the edges trace the atom occurrences between rule instances. We first state a fact, whose proof is immediate.
 
+\Tom{Rehprased slightly and removed ``unique''.}
+
+\TODO{Proof.}
+
 %------------------------------------------------
 \begin{proposition}\label{proposition:FlowUnique}
-Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ such that:
+Given a derivation\/ $\Phi$ in the system $\SKS$, there is an atomic flow $\phi$ such that:
 \begin{enumerate}
 %
 \item there is a surjective map between the set of atom occurrences of\/ $\Phi$ and the set of edges of $\phi$;
