--- a/defs.tex
+++ b/defs.tex
@@ -31,7 +31,7 @@
 \newcommand{\Pao }[1]{\ifnonotes\else{\color{darkgreen}\noindent{\bf P: }#1}\fi}
 \newcommand{\Tom }[1]{\ifnonotes\else{\color{darkred}  \noindent{\bf T: }#1}\fi}
 \newcommand{\TODO}[1]{\ifnonotes\else{\color{red}    \noindent{\bf TODO }#1}\fi}
-\nonotestrue % If this is commented, notes appear in the paper (if any)
+%\nonotestrue % If this is commented, notes appear in the paper (if any)
 
 %-------------------------------------------
 
