--- a/defs.tex
+++ b/defs.tex
@@ -1,6 +1,7 @@
 %-------------------------------------------
 
 \hyphenation{co-weak-en-ing}
+\hyphenation{co-con-tract-ion}
 \hyphenation{La-mar-che}
 \hyphenation{quasi-poly-no-mial}
 
