--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -96,7 +96,9 @@ Let $\boldsymbol\epsilon=\epsilon_1,\dots,\epsilon_n$, $\boldsymbol\iota=\iota_1
 we mean
 \[
 \vcenter{\hbox{\includegraphics{Figures/convDissamb3}}}
-\qquad\mbox{and}\qquad
+\qquad\mbox{and}
+\]
+\[
 \vcenter{\hbox{\includegraphics{Figures/convDissamb4}}}
 \quad,
 \]
