--- a/local_reductions.tex
+++ b/local_reductions.tex
@@ -313,7 +313,7 @@ $}
 $}
 %---------------------------------------
 \begin{figure}[tbp]
-\[
+\[\hss
 \begin{array}{@{}l@{}c@{}}
 %---------------------------------------
 \rcdiu\colon
