--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -42,7 +42,7 @@ An atomic flow is
 \]
 %---
 \item\label{definition:FlowNormalForms:item:WeaklyStreamlinedPolarity}
-\emph{weakly streamlined with respect to the polarity assignment $\pi$}\index{streamlined!weakly!with respect to polarity assignment} if it can be represented as
+\emph{weakly streamlined with respect to the polarity assignment $\pi$}\index{streamlined!weakly!with respect to polarity} if it can be represented as
 \[
 \vcenter{\hbox{\includegraphics{Figures/normWeakPolForm}}}
 \quad;
