--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -217,55 +217,7 @@ Figure~\vref{figure:ExampleAtomicFlows} has three examples of derivations and th
 \caption{Examples of derivations in the calculus of structures (top row), their translation into the functorial calculus (middle row), and the atomic flows associated with the latter (bottom row).}
 \label{figure:ExampleAtomicFlows}
 \end{figure}
-
-\Tom{Added example}
-
-\TODO{Clean up the following example.}
-
-\begin{example}
-As we mention at the beginning of this section, atomic flows help in selectively substituting for atom occurrences. In fact, given a derivation and its associated flow, we can use edges and boxes to individuate atom occurrences in the derivation, and then possibly substitute for them. For example, let us suppose that we are given the following associated derivation and flow:
-\[
-\Phi=
-\vlsbr[\vlderivation                                              {
-       \vlin{    }{}\fff                                         {
-       \vlin{\med}{}{\vls(\vlinf{}{}a{\vls[a.a]}
-                         .\vlinf={}{\bar a}{\vls[\fff.\bar a]})}{
-       \vlhy        {\vls[(a.\fff).(a
-                                   .\vlinf{}{}{\bar a}\fff)]   }}}}
-      \vlx.\vlx\bar a]
-\qquad\text{and}\qquad
-\vcenter{\hbox{\includegraphics{Figures/substEx}}}
-\quad.
-\]
-We can then distinguish between the three occurrences of $\bar a$ that are mapped to edge $\one$ and the one that is not, as in
-\[
-\Phi=
-\vlsbr[\vlderivation                                                        {
-       \vlin{    }{}\fff                                                   {
-       \vlin{\med}{}{\vls(\vlinf{}{}a{\vls[a.a]}
-                         .\vlinf={}{\bar a^\one}{\vls[\fff.\bar a^\one]})}{
-       \vlhy        {\vls[(a.\fff).(a
-                                   .\vlinf{}{}{\bar a^\one}\fff)]        }}}}
-      \vlx.\vlx\bar a]
-\quad;
-\]
-we can also substitute for these occurrences, for example by $\{\bar a^\one/\fff\}$; such a situation occurs in the proof of Theorem~\ref{ThSimpleForm}. Note that simply substituting $\fff$ for $\bar a^\one$ would invalidate this derivation because it would break the cut and weakening instances; however, the proof of Theorem~\ref{ThSimpleForm} specifies how to fix such broken instances.
-\[
-\Phi=
-\vlsbr[\vlderivation                                                        {
-       \vlin{    }{}\fff                                                   {
-       \vlin{\med}{}{\vls(\vlinf{}{}{a^\phi}{\vls[a.a]}
-                         .\vlinf={}{\bar a^\phi}{\vls[\fff.\bar a^\phi]})}{
-       \vlhy        {\vls[(a.\fff).(a
-                                   .\vlinf{}{}{\bar a^\phi}\fff)]        }}}}
-      \vlx.\vlx\bar a^\phi]
-\qquad\text{and}\qquad
-\vcenter{\hbox{\includegraphics{Figures/substExBox}}}
-\]
-\end{example}
-%------------
-
-\TODO{Move definition of substitution here.}
+%-----------
 
 %--------------------------------------------------
 \begin{definition}\label{definiton:FlowRestriction}
@@ -382,6 +334,92 @@ where $h\ge0$ (this can possibly be done in many different ways). By the inducti
 whose flow is $\phi$.
 \end{proof}
 %----------
+
+\Tom{Added example (from paper on quasipolynomial normalisation.}
+
+\TODO{Clean up the following example (cf. AFII).}
+
+\begin{example}
+As we mention at the beginning of this section, atomic flows help in selectively substituting for atom occurrences. In fact, given a derivation and its associated flow, we can use edges and boxes to individuate atom occurrences in the derivation, and then possibly substitute for them. For example, let us suppose that we are given the following associated derivation and flow:
+\[
+\Phi=
+\vlsbr[\vlderivation                                              {
+       \vlin{    }{}\fff                                         {
+       \vlin{\med}{}{\vls(\vlinf{}{}a{\vls[a.a]}
+                         .\vlinf={}{\bar a}{\vls[\fff.\bar a]})}{
+       \vlhy        {\vls[(a.\fff).(a
+                                   .\vlinf{}{}{\bar a}\fff)]   }}}}
+      \vlx.\vlx\bar a]
+\qquad\text{and}\qquad
+\vcenter{\hbox{\includegraphics{Figures/substEx}}}
+\quad.
+\]
+We can then distinguish between the three occurrences of $\bar a$ that are mapped to edge $\one$ and the one that is not, as in
+\[
+\Phi=
+\vlsbr[\vlderivation                                                        {
+       \vlin{    }{}\fff                                                   {
+       \vlin{\med}{}{\vls(\vlinf{}{}a{\vls[a.a]}
+                         .\vlinf={}{\bar a^\one}{\vls[\fff.\bar a^\one]})}{
+       \vlhy        {\vls[(a.\fff).(a
+                                   .\vlinf{}{}{\bar a^\one}\fff)]        }}}}
+      \vlx.\vlx\bar a]
+\quad;
+\]
+we can also substitute for these occurrences, for example by $\{\bar a^\one/\fff\}$; such a situation occurs in the proof of Theorem~\ref{ThSimpleForm}. Note that simply substituting $\fff$ for $\bar a^\one$ would invalidate this derivation because it would break the cut and weakening instances; however, the proof of Theorem~\ref{ThSimpleForm} specifies how to fix such broken instances.
+
+We generalise this labelling mechanism to boxes. For example, we can use a different representation of the flow of $\Phi$ to individuate two classes $a^\phi$ and $\bar a^\phi$ of atom occurences, as follows:
+\[
+\Phi=
+\vlsbr[\vlderivation                                                        {
+       \vlin{    }{}\fff                                                   {
+       \vlin{\med}{}{\vls(\vlinf{}{}{a^\phi}{\vls[a.a]}
+                         .\vlinf={}{\bar a^\phi}{\vls[\fff.\bar a^\phi]})}{
+       \vlhy        {\vls[(a.\fff).(a
+                                   .\vlinf{}{}{\bar a^\phi}\fff)]        }}}}
+      \vlx.\vlx\bar a^\phi]
+\qquad\text{and}\qquad
+\vcenter{\hbox{\includegraphics{Figures/substExBox}}}
+\]
+\end{example}
+%------------
+
+\Tom{Moved the following Proposition, Notation and Remark from the sectoin on Global Reductions.}
+
+%------------------------------------------------------------
+\begin{proposition}\label{proposition:DerivationSubstitution}
+Given a derivation\/ $\vlder\Phi\SKS{\beta}\alpha$, let its associated flow have shape
+\[
+\vcenter{\hbox{\includegraphics{Figures/propSubst1}}}\quad,
+\]
+such that $\phi$ is a connected component whose edges are each associated with atom $a$; then, for any formula $\gamma$, there exists a derivation
+\[
+\vlder\Psi\SKS{\beta \{a^\phi/\gamma\}}
+              {\alpha\{a^\phi/\gamma\}}
+\]
+whose associated flow is
+\[
+\vcenter{\hbox{\includegraphics{Figures/propSubst2}}}
+\]
+where $n$ is the number of atom occurrences in $\gamma$; moreover, the size of\/ $\Psi$ depends linearly on the size of\/ $\Phi$ and quadratically on the size of $\gamma$.
+\end{proposition}
+
+\begin{proof}
+We can proceed by structural induction on $\Phi$. For every formula in $\Phi$ we substitute $a^\phi$ with $\gamma$. Since all the edges in $\phi$ are mapped to from $a$ (and not $\bar a$), we know that all the vertices in $\phi$ are mapped to from instances of $\acd$, $\acu$, $\awd$ and $\awu$. We substitute every instance of $\acd$, $\acu$, $\awd$ and $\awu$ where $a^\phi$ appears, by $\cod$, $\cou$, $\wed$, $\weu$, respectively, with $\gamma$ in the place of $a^\phi$. The result then follows by Lemma~\vref{lemma:GenericWeakening} and Lemma~\vref{lemma:GenericContraction}.
+\end{proof}
+%----------
+
+%---------------
+\begin{notation}
+The derivation $\Psi$ obtained in the proof of Propostion~\vref{proposition:DerivationSubstitution} is denoted $\Phi\{a^\phi/\gamma\}$.
+\end{notation}
+%-------------
+
+%-------------
+\begin{remark}
+The notion of substitution can be extended to allow $\phi$ to contain interaction and cut vertices, but we shall not need that in this thesis.
+\end{remark}
+%-----------
 
 %=================================================================
 \section{A Normal Form of Derivation}\label{section:DerNormalForm}
