Fixed spacing of non-terminating rewrite example

--- a/Figures/frcNoTerm.tex
+++ b/Figures/frcNoTerm.tex
@@ -16,8 +16,8 @@
 ( 6  ,6)*{\afvj4};
 ( 3  ,0)*{\afaiuex{}{}{}{}{}{}32};
 ( 0  ,4)*{\afacd{}{}{}{}{}{}};
-(-3.5,0)*{\invisiblemark};
-( 7.5,0)*{\invisiblemark}}
+(-3.5,-4)*{\invisiblemark};
+( 7.5,12)*{\invisiblemark}}
 \quad\to_\frc\quad
 \atomicflow{
 ( 9  ,12)*{\afaidex{}{}{}{}{}{}32};
